update index css

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
   background-color: #EBEBEB;
 
   font-synthesis: none;
@@ -9,3 +8,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  margin: 0;
+}
