--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@ nav {
     background: linear-gradient(0deg, #5469B4, #5469B4), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
     border: 1px solid #000000;
     height: 4rem;
-    padding: .5rem;
+    padding: 0 1rem;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -11,10 +11,12 @@ nav {
         background-color: #D9D9D9;
         box-shadow: 0px 4px 4px 0px #00000040;
         border: 1px solid #000000;
-        border-radius: 5px;
+        border-radius: 10px;
+        width: 30%;
         display: flex;
         align-items: center;
         padding: 0 1rem;
+        box-sizing: border-box;
 
         input[type="text"] {
             outline: none;
@@ -22,6 +24,7 @@ nav {
             background: rgba(255, 255, 255, 0);
             font-size: 1rem;
             padding: 0.5rem 0;
+            width: 100%;
         }
 
         button {
