--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -33,17 +33,27 @@ main {
             }
 
             div#filterGroup{
-                .customRadioGroupCheckBox {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: start;
-                    padding: 1rem ;
 
-                    label {
+                .filterGroupItem {
+                    background: #FFFFFF;
+                    border: 1px solid #000000;
+                    border-radius: 3px;
+                    padding: 1rem;
+                    margin: 1px 0;
+
+                    .customRadioGroupCheckBox {
                         display: flex;
-                        gap: 0.5rem;
+                        flex-direction: column;
+                        align-items: start;
+                        padding: 1rem ;
+
+                        label {
+                            display: flex;
+                            gap: 0.5rem;
+                        }
                     }
                 }
+
             }
 
         }
