--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,15 @@
 nav {
     background: linear-gradient(0deg, #5469B4, #5469B4), linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
     border: 1px solid #000000;
+    width: 100%;
     height: 4rem;
+    box-sizing: border-box;
     padding: 0 1rem;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: fixed;
+    z-index: 10;
 
     .searchBox {
         background-color: #D9D9D9;
