--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,11 +1,17 @@
 main {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+    min-height: 100vh;
+    padding-top: 4rem;
+    box-sizing: border-box;
+    display: flex;
 
     aside#sidebar {
+        position: fixed;
+        width: 25%;
+        height: 100%;
+        top: 4rem;
+
         box-sizing: border-box;
-        padding: 2.5rem 0 2.5rem 3.5rem;
+        padding: 2.5rem 2px 2.5rem 3.5rem;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
@@ -61,16 +67,25 @@ main {
     }
 
     section {
+        flex: 1;
+        margin-left: 25%;
         padding: 2.5rem;
         box-sizing: border-box;
 
         div#recipeList {
-            height: 100%;
+            min-height: 100%;
             background: #FFFFFF;
             box-shadow: 0px 4px 4px 0px #00000040;
             border-radius: 15px;
             padding: 2.5rem;
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+
+            // div {
+            //     height: 200px;
+            //     border: 1px solid black;
+            // }
         }
     }
 }
