--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -81,11 +81,26 @@ main {
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
+            gap: 1rem;
+            align-items: center;
+            justify-content: center;
 
-            // div {
-            //     height: 200px;
-            //     border: 1px solid black;
-            // }
+            h1.emptyRecipe {
+                font-size: 2rem;
+                font-weight: 600;
+            }
+
+            .recipeItem {
+                height: 9rem;
+                border: 1px solid black;
+                border-radius: 15px;
+                width: 100%;
+            }
+
+            .line {
+                border-top: 1px solid #435490;
+                width: 100%;
+            }
         }
     }
 }
