--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -91,10 +91,74 @@ main {
             }
 
             .recipeItem {
-                height: 9rem;
+                width: 100%;
+                height: 9.5rem;
                 border: 1px solid black;
                 border-radius: 15px;
-                width: 100%;
+                display: flex;
+                box-sizing: border-box;
+                overflow: hidden;
+
+                div.imageHolder {
+                    position: relative;
+
+                    img#cover {
+                        height: 100%;
+                        border-radius: 15px;
+                    }
+
+                    button {
+                        outline: none;
+                        border: none;
+                        cursor: pointer;
+                        background-color: rgba(255, 255, 255, 0);
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        position: absolute;
+                        top: 0.25rem;
+                        right: 0.25rem;
+                        z-index: 2;
+
+                        img.icon {
+                            width: 100%;
+                        }
+                    }
+                }
+
+                div.recipeDetails {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                    padding: 1rem;
+
+                    div, p, h1 {
+                        margin: 0;
+                        font-weight: 600;
+                    }
+
+                    p.recipeDesc {
+                        font-size: 0.80rem;
+                    }
+
+                    p.seeMore {
+                        font-size: 0.6rem;
+                        padding: 0.55rem 0px;
+                    }
+
+                    div.footer {
+                        display: flex;
+                        gap: 5px;
+
+                        p#name {
+                            flex: 3;
+                        }
+
+                        p#dateAdded {
+                            flex: 1;
+                        }
+
+                    }
+                }
             }
 
             .line {
