--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -110,10 +110,12 @@ main {
             .recipeItem {
                 width: 100%;
                 height: 9.5rem;
-                border: 1px solid black;
                 border-radius: 15px;
                 display: flex;
                 box-sizing: border-box;
+                box-shadow: 0px 4px 4px 0px #00000040;
+                border: 1px solid #000000;
+                cursor: pointer;
 
                 div.imageHolder {
                     position: relative;
@@ -145,7 +147,9 @@ main {
                     flex: 1;
                     display: flex;
                     flex-direction: column;
-                    padding: 1rem;
+                    justify-content: space-between;
+                    padding: 0.9rem;
+                    position: relative;
 
                     div, p, h1 {
                         margin: 0;
@@ -153,20 +157,25 @@ main {
                     }
 
                     p.recipeDesc {
-                        font-size: 0.80rem;
+                        font-size: 0.65rem;
+                        max-height: calc(3 * 1.2em);
+                        line-height: 1.2em;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
 
                     p.seeMore {
-                        font-size: 0.6rem;
+                        font-size: 0.55rem;
                         padding: 0.55rem 0px;
                     }
 
                     div.footer {
                         display: flex;
                         gap: 5px;
+                        font-size: 0.70rem;
 
                         p#name {
-                            flex: 3;
+                            flex: 3.5;
                         }
 
                         p#dateAdded {
