--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -18,19 +18,20 @@ main {
             flex-direction: column;
             gap: 1rem;
 
-            h4 {
+            h3 {
                 letter-spacing: 0.2px;
                 margin: 0;
             }
 
             select {
                 outline: none;
-                font-weight: 600;
+                font-weight: 500;
                 padding: 2px;
                 box-sizing: border-box;
+                font-size: 1.1rem;
 
                 option {
-                    font-weight: 600;
+                    font-weight: 500;
                     padding: 2px;
                 }
             }
