--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,8 @@
         border: 1px solid #000000;
         width: 100%;
         height: 4rem;
+        min-height: 4rem;
+        max-height: 4rem;
         box-sizing: border-box;
         padding: 0 1rem;
         display: flex;
