--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -82,6 +82,11 @@ main#recipe {
                     border: 1px solid #A6A6A6;
                     background-color: #FFFFFF;
                     display: flex;
+                    border-radius: 4px;
+
+                    &:focus-within {
+                        border: 1px solid #1047b4;
+                    }
 
                     input, textarea {
                         border: none;
@@ -89,7 +94,8 @@ main#recipe {
                         outline: none;
                         width: 100%;
                         padding: 7px;
-                        font-size: 1rem;
+                        font-size: 0.8rem;
+                        resize: none;
                     }
 
                     img {
