--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -73,6 +73,7 @@ main {
             flex-direction: column;
             align-items: flex-start;
             gap: 1.2rem;
+            user-select: none;
 
             button {
                 display: flex;
