--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -94,11 +94,12 @@ main {
                 &#recipeImage {
                     background-color: rgba(255, 255, 255, 0);
                     width: 100%;
-                    border: 1px solid black;
                     padding: 0;
+                    border-radius: 5px;
 
                     img {
                         width: 100%;
+                        border-radius: 5px;
                     }
                 }
             }
