--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -115,21 +115,24 @@ main#home {
 
             .recipeItem {
                 width: 100%;
-                height: 9.5rem;
-                border-radius: 15px;
-                display: flex;
+                border-radius: .5rem;
+                display: grid;
+                grid-template-columns: 1fr 2fr;
                 box-sizing: border-box;
                 box-shadow: 0px 4px 4px 0px #00000040;
                 border: 1px solid #000000;
                 cursor: pointer;
 
                 div.imageHolder {
-                    position: relative;
-
-                    img#cover {
-                        height: 100%;
-                        border-radius: 14px;
-                    }
+                    height: 10rem;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+                    box-sizing: border-box;
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: flex-end;
+                    border-radius: 6px;
 
                     button {
                         outline: none;
@@ -138,10 +141,6 @@ main#home {
                         background-color: rgba(255, 255, 255, 0);
                         width: 2.5rem;
                         height: 2.5rem;
-                        position: absolute;
-                        top: 0.25rem;
-                        right: 0.25rem;
-                        z-index: 2;
 
                         img.icon {
                             width: 100%;
@@ -150,7 +149,8 @@ main#home {
                 }
 
                 div.recipeDetails {
-                    flex: 1;
+                    height: 10rem;
+                    box-sizing: border-box;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-between;
