--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -91,16 +91,15 @@ main {
                     }
                 }
 
-                &#recipeImage {
-                    background-color: rgba(255, 255, 255, 0);
+                &#recipeImageHolder {
                     width: 100%;
+                    height: 20rem;
                     padding: 0;
                     border-radius: 5px;
-
-                    img {
-                        width: 100%;
-                        border-radius: 5px;
-                    }
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    background-position: center;
+                    box-sizing: border-box;
                 }
             }
         }
