--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -91,15 +91,21 @@ main {
                     }
                 }
 
-                &#recipeImageHolder {
-                    width: 100%;
-                    height: 20rem;
-                    padding: 0;
-                    border-radius: 5px;
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    background-position: center;
-                    box-sizing: border-box;
+            }
+
+            #recipeImageContainer {
+                width: 100%;
+                height: 20rem;
+                padding: 0;
+                border-radius: 5px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+                box-sizing: border-box;
+                cursor: pointer;
+
+                input[type="file"] {
+                    display: none;
                 }
             }
         }
